--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.49.1",
     "@zxing/browser": "^0.1.5",
     "clsx": "^2.1.1",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.473.0",
     "next": "14.2.20",
     "next-themes": "^0.4.6",
