--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@zxing/browser": "^0.1.5",
     "clsx": "^2.1.1",
     "jszip": "^3.10.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.473.0",
     "next": "14.2.20",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
